@@ -147,6 +147,8 @@ int sndwarp(ENVIRON *csound, SNDWARP *p)
           frIndx = (MYFLT)p->maxFr;
           if (p->prFlg) {
             p->prFlg = 0;   /* false */
+          }
+          else {
             csound->Warning(csound, Str("SNDWARP at last sample frame"));
           }
         }
